// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TwitterButton adds a beforeClick function for the click handler 1`] = `
<ButtonRound
  aria-label="Twitter"
  className="share-button--twitter"
  href="#"
  icon={[Function]}
  label="Twitter"
  onClick={[Function]}
  role="button"
  title=""
/>
`;

exports[`TwitterButton does render if boxShadow is true 1`] = `
<ButtonRound
  aria-label="Twitter"
  boxShadow={true}
  className="share-button--twitter"
  href="#"
  icon={[Function]}
  label="Twitter"
  onClick={[Function]}
  role="button"
  title=""
/>
`;

exports[`TwitterButton does render if utmParams are provided 1`] = `
<ButtonRound
  aria-label="Twitter"
  className="share-button--twitter"
  href="#"
  icon={[Function]}
  label="Twitter"
  onClick={[Function]}
  role="button"
  title=""
/>
`;

exports[`TwitterButton renders a round button 1`] = `
<ButtonRound
  aria-label="Twitter"
  className="share-button--twitter"
  href="#"
  icon={[Function]}
  label="Twitter"
  onClick={[Function]}
  role="button"
  title=""
/>
`;
